welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:1: error: not found: value fleur
fleur(c: Color)
^FlowerPot:1: error: not found: value c
fleur(c: Color)
      ^FlowerPot:3: error: not found: value c
  setCouleurBrosse(c)
                   ^FlowerPot:15: error: not found: value growFlowers
growFlowers()
^FlowerPot:17: error: not found: value fleur
  fleur(Color.RED)
  ^FlowerPot:19: error: not found: value fleur
  fleur(Color.cyan)
  ^FlowerPot:25: error: not found: value fleur
  fleur(Color.orange)
  ^FlowerPot:30: error: not found: value fleur
  fleur(Color.pink)
  ^FlowerPot:32: error: not found: value fleur
  fleur(Color.green)
  ^